appId: com.mirafactory.layers
---
- launchApp:
    clearState: false
- waitForAnimationToEnd:
    timeout: 6000

- tapOn: "Open menu"
- waitForAnimationToEnd:
    timeout: 1500
- tapOn: "Profile"
- waitForAnimationToEnd:
    timeout: 6000

# Try harder scroll
- swipe:
    start: 50%, 80%
    end: 50%, 20%
- waitForAnimationToEnd:
    timeout: 1500
- swipe:
    start: 50%, 80%
    end: 50%, 20%
- waitForAnimationToEnd:
    timeout: 1500
- swipe:
    start: 50%, 80%
    end: 50%, 20%
- waitForAnimationToEnd:
    timeout: 1500
- swipe:
    start: 50%, 80%
    end: 50%, 20%
- waitForAnimationToEnd:
    timeout: 1500
- takeScreenshot: ios-walk-profile-deep-scroll
